add arrow for back and forward

--- a/apps/jobs/views/incs/home.ejs
+++ b/apps/jobs/views/incs/home.ejs
@@ -2,7 +2,7 @@
 	<div class="bg" data-cls="bg-one"></div>
 	<div class="link">
 		<a href="#product">
-			<img src="/img/jobs/arrow-down.png" alt="">
+			<img src="/img/jobs/down.png" alt="">
 		</a>
 	</div>
 </section>
@@ -11,16 +11,26 @@
 	<div class="bg" data-cls="bg-two"></div>
 	<div class="link">
 		<a href="#team">
-			<img src="/img/jobs/arrow-down.png" alt="">
+			<img src="/img/jobs/down.png" alt="">
 		</a>
 	</div>
+<!-- 	<div class="link-top">
+		<a href="#home">
+			<img src="/img/jobs/up.png" alt="">
+		</a>
+	</div> -->
 </section>
 
 <section data-role="page" class="page-home" id="team">
 	<div class="bg" data-cls="bg-three"></div>
 	<div class="link">
 		<a href="#pos_type">
-			<img src="/img/jobs/arrow-down.png" alt="">
+			<img src="/img/jobs/down.png" alt="">
 		</a>
 	</div>
+	<!-- <div class="link-top">
+		<a href="#product">
+			<img src="/img/jobs/up.png" alt="">
+		</a>
+	</div> -->
 </section>
