add position and qq

--- a/apps/jobs/views/index.ejs
+++ b/apps/jobs/views/index.ejs
@@ -172,12 +172,22 @@
 						<div class="modal-body">
 							<form method="post" id="form1">
 								<fieldset>
+									<label>应聘岗位</label>
+									<select name="position" class="form-control">
+										<option value="Java研发(WEB方向)">Java研发(WEB方向)</option>
+										<option value="数据挖掘工程师(Hadoop方向)">数据挖掘工程师(Hadoop方向)</option>
+										<option value="游戏数据分析师">游戏数据分析师</option>
+										<option value="数据产品经理">数据产品经理</option>
+									</select>
 									<label>称呼</label>
 									<input type="text" name="nickname" placeholder="填写称呼，方便我们联系您" maxlength="20"
 										required class="form-control">
 									<label>电话号码</label>
 									<input type="text" name="tel" maxlength="15" required
 										placeholder="请输入您的电话号码" class="form-control">
+									<label>QQ</label>
+									<input type="text" name="qq" maxlength="15" required
+										placeholder="请输入qq号码" class="form-control">
 									<p class="text-center" style="margin-top: 15px;">
 										<button type="submit" class="btn btn-primary btn-block" id="btn_send">立即自荐</button>
 										<button type="button" class="btn btn-default btn-block" id="close">算了，不想被打扰</button>
@@ -234,7 +244,9 @@
 					var form = $('#form1')[0]
 					var data = {
 						nickname: form.nickname.value,
-						tel: form.tel.value
+						tel: form.tel.value,
+						qq: form.qq.value,
+						position: form.position.value
 					}
 					if(!data.nickname || !data.tel) {
 						return alert('请填写昵称和联系电话')
@@ -247,6 +259,7 @@
 						success: function() {
 							alert('您的信息已提交，感谢关注DataEye。我们的工作人员会在24小时内和您取得联系，请保持联系方式畅通。')
 							$('#modal_form').hide()
+							form.reset()
 						},
 						error: function(xhr, status, text) {
 							alert(xhr.responseText)
