--- a/apps/jobs/views/index.ejs
+++ b/apps/jobs/views/index.ejs
@@ -9,227 +9,242 @@
 		<meta name="format-detection" content="telephone=no,email=no" />
 		<title>加入DataEye</title>
 		<link rel="stylesheet" href="./css/bootstrap.css?v=3.3">
-		<style>
-			.wrapper {
-				padding: 10px 5px;
-			}
-			footer {
-				text-align: center;
-				position: fixed;
-				left: 0;
-				right: 0;
-				bottom: 0;
-				background: #000;
-				opacity: 0.8;
-				padding: 6px 0;
-				border-top: 1px solid #aaa;
-			}
-			footer>div{
-				display: inline-block;
-				width: 48%;
-				text-align: center;
-			}
-			footer .btn {
-				font-size: 1.4em;
-			}
-			footer .btn {
-				opacity: 1;
-			}
-			.panel-body {
-				display: none;
-				overflow: hidden;
-			}
-			h1 {
-				font-size: 2em;
-				color: #585858;
-				text-align: center;
-				margin: 5px 0 20px 0;
-			}
-			.wrapper .panel-title, h3, h4{
-				font-size: 1.2em;
-			}
-			h3 em {
-				font-size: 1em;
-			}
-			.share_wx {
-				color:#fff;
-				text-align: right;
-				font-size: 1.2em;
-			}
-			#modal_share .modal-backdrop{
-				opacity: 0.8;
-			}
-		</style>
+		<link rel="stylesheet" href="./css/jobs.css?v=3.3">
 	</head>
 	<body>
-		<div class="wrapper">
-			<h1>DataEye岗位招聘</h1>
-			<div class="panel panel-info">
-				<div class="panel-heading">
-					<h3 class="panel-title">
-					Java研发(WEB方向)
-					<em class="pull-right"><span>+</span> 查看职位</em>
-					</h3>
+		<div id="wrapper">
+		</div>
+
+		<script type="text" id="home">
+			<section>
+				<div class="banner">
+					<img src="/img/jobs/banner.png" alt="">
 				</div>
-				<div class="panel-body">
-					职位描述：
-					<ol>
-						<li>协助手机游戏开发或运营商接入我们数据分析SDK产品，跟进SDK接入情况，接入中出现的问题及时跟相关技术人员反馈并跟进直到解决。</li>
-						<li>跟进使用我们数据统计SDK中的客户进行定期回访，询问使用情况以及解答使用中遇到的问题。</li>
-						<li>客户使用SDK产品过程中出现异常数据或异常问题即时进行反馈，联系相关技术人员解决，并跟进问题直至解决。</li>
-						<li>能够解答客户提出的一些游戏数据问题，根据游戏数据表现来分析游戏现状。</li>
-						<li>公司博客、微信、微博日常运营。</li>
-					</ol>
-					职位要求：
-					<ol>
-						<li>至少一年游戏开发、运营或游戏数据分析经验。</li>
-						<li>熟练使用word、Excel办公软件。</li>
-						<li>较强语言沟通能力与问题解决能力。</li>
-						<li>性格开朗，有一定的抗压能力。</li>
-					</ol>
+
+				<div class="desc">
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;DataEye是立足移动游戏，服务游戏全产业链的第三方专业数据分析服务平台。共有四大产品线：D-OAP运营分析平台、D-EAP体验分析平台、D-HAP HTML5游戏分析平台、D-IAP游戏投后分析平台。
+					<br>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;DataEye助力游戏产业链各环节的数据统计分析，打造第三方"零距离"专业服务，开启企业私有云、企业定制化、服务全球化、多数据源采集等特色服务。
 				</div>
-			</div>
-			<div class="panel panel-success">
-				<div class="panel-heading">
-					<h3 class="panel-title">
-					数据挖掘工程师(Hadoop方向)
-					<em class="pull-right"><span>+</span> 查看职位</em>
-					</h3>
+
+				<div class="arrow-down"></div>
+			</section>
+		</script>
+
+<script type="text" id="pos">
+		<section class="pages-position">
+			<div class="arrow-up"></div>
+
+			<div class="head-wrapper">
+				<div class="head">
+					<img src="/img/jobs/banner02.png" alt="">
 				</div>
-				<div class="panel-body">
-					职位描述：
-					<ol>
-						<li>协助手机游戏开发或运营商接入我们数据分析SDK产品，跟进SDK接入情况，接入中出现的问题及时跟相关技术人员反馈并跟进直到解决。</li>
-						<li>跟进使用我们数据统计SDK中的客户进行定期回访，询问使用情况以及解答使用中遇到的问题。</li>
-						<li>客户使用SDK产品过程中出现异常数据或异常问题即时进行反馈，联系相关技术人员解决，并跟进问题直至解决。</li>
-						<li>能够解答客户提出的一些游戏数据问题，根据游戏数据表现来分析游戏现状。</li>
-						<li>公司博客、微信、微博日常运营。</li>
-					</ol>
-					职位要求：
-					<ol>
-						<li>至少一年游戏开发、运营或游戏数据分析经验。</li>
-						<li>熟练使用word、Excel办公软件。</li>
-						<li>较强语言沟通能力与问题解决能力。</li>
-						<li>性格开朗，有一定的抗压能力。</li>
-					</ol>
+
+				<div class="logo">
+					<img src="/img/jobs/logo.png" alt="">
 				</div>
-			</div>
-			<div class="panel panel-warning">
-				<div class="panel-heading">
-					<h3 class="panel-title">
-					游戏数据分析师
-					<em class="pull-right"><span>+</span> 查看职位</em>
-					</h3>
-				</div>
-				<div class="panel-body">
-					职位描述：
-					<ol>
-						<li>负责构建游戏数据分析与数据挖掘业务分析体系，负责海量运营数据的分类汇总和分析研究</li>
-						<li>负责对数据信息进行深度挖掘和有效利用，充分实现数据的商业价值</li>
-						<li>跟踪并分析玩家行为，为游戏运营和设计提供海量数据支持</li>
-					</ol>
-					职位要求：
-					<ol>
-						<li>计算机或相关专业本科以上学历；5年以上相关工作经验</li>
-						<li>扎实的计算机基础，熟悉JAVA开发，较强的算法能力</li>
-						<li>具备深厚数据建模（机器学习，数据挖掘，信息检索背景）和分析理论知识和经验</li>
-						<li>精通常用的数据分析工具，有大规模数据挖掘、自然语言处理、机器学习、hadoop平台经验优先</li>
-						<li>善于创新、思维敏捷、精力充沛，沟通能力强，具备较强的团队合作精神并能够承受较大工作压力</li>
-						<li>熟悉游戏行业并且对于业内常见的业务形态与商业模式有深入的理解，对业务变化有敏锐的洞察力</li>
-					</ol>
-				</div>
-			</div>
-			<div class="panel panel-danger" style="margin-bottom: 50px;">
-				<div class="panel-heading">
-					<h3 class="panel-title">
-					数据产品经理
-					<em class="pull-right"><span>+</span> 查看职位</em>
-					</h3>
-				</div>
-				<div class="panel-body">
-					职位描述：
-					<ol>
-						<li>负责推广DataEye产品，进行对外商务合作项目的商洽、推进，管理现有客户</li>
-						<li>制定针对游戏厂商、运营商、发行商的合作方案，并实施拓展</li>
-						<li>负责收集目标市场信息，分析竞争对手产品市场推广情况，提出更有效商务模式职位要求</li>
-						<li>从事游戏 BD 工作两年以上，对游戏行业有深刻的认识和广泛的资源</li>
-						<li>有责任感，很强的计划、推动和执行力</li>
-					</ol>
-				</div>
+
+				<div style="clear: both;"></div>
 			</div>
 
-			<div class="modal fade in" id="modal_form">
-				<div class="modal-backdrop fade in"></div>
-				<div class="modal-dialog">
-					<div class="modal-content">
-						<div class="modal-header">
-							<button type="button" class="close" data-dismiss="modal">
-							<span aria-hidden="true">×</span>
-							<span class="sr-only">关闭</span>
-							</button>
-							<h4 class="modal-title">填写联系方式</h4>
+			<div class="datalist">
+				<ul>
+					<li>
+						<h3>
+							<span>
+								<img src="/img/jobs/more.png" alt="">
+							</span>
+							Java研发(WEB方向)
+						</h3>
+						<div class="position-desc">
+							<strong>职位描述：</strong>
+							<ol>
+								<li> CSS properties of elements in the</li>
+								<li> CSS properties of elements in the</li>
+								<li> CSS properties of elements in the</li>
+								<li> CSS properties of elements in the</li>
+							</ol>
+							<strong>职位要求：</strong>
+							<ol>
+								<li> CSS properties of elements in the</li>
+								<li> CSS properties of elements in the</li>
+								<li> CSS properties of elements in the</li>
+								<li> CSS properties of elements in the</li>
+							</ol>
 						</div>
-						<div class="modal-body">
-							<form method="post" id="form1">
-								<fieldset>
-									<label>应聘岗位</label>
-									<select name="position" class="form-control">
-										<option value="Java研发(WEB方向)">Java研发(WEB方向)</option>
-										<option value="数据挖掘工程师(Hadoop方向)">数据挖掘工程师(Hadoop方向)</option>
-										<option value="游戏数据分析师">游戏数据分析师</option>
-										<option value="数据产品经理">数据产品经理</option>
-									</select>
-									<label>称呼</label>
-									<input type="text" name="nickname" placeholder="填写称呼，方便我们联系您" maxlength="20"
-										required class="form-control">
-									<label>电话号码</label>
-									<input type="text" name="tel" maxlength="15" required
-										placeholder="请输入您的电话号码" class="form-control">
-									<label>QQ</label>
-									<input type="text" name="qq" maxlength="15" required
-										placeholder="请输入qq号码" class="form-control">
-									<p class="text-center" style="margin-top: 15px;">
-										<button type="submit" class="btn btn-primary btn-block" id="btn_send">立即自荐</button>
-										<button type="button" class="btn btn-default btn-block" id="close">算了，不想被打扰</button>
-									</p>
-								</fieldset>
-							</form>
+					</li>
+					<li>
+						<h3>
+							<span>
+								<img src="/img/jobs/more.png" alt="">
+							</span>
+							数据挖掘工程师(Hadoop方向)
+						</h3>
+						<div class="position-desc">
+							<strong>职位描述：</strong>
+							<ol>
+								<li> CSS properties of elements in the</li>
+								<li> CSS properties of elements in the</li>
+								<li> CSS properties of elements in the</li>
+								<li> CSS properties of elements in the</li>
+							</ol>
+							<strong>职位要求：</strong>
+							<ol>
+								<li> CSS properties of elements in the</li>
+								<li> CSS properties of elements in the</li>
+								<li> CSS properties of elements in the</li>
+								<li> CSS properties of elements in the</li>
+																<li> CSS properties of elements in the</li>
+								<li> CSS properties of elements in the</li>
+								<li> CSS properties of elements in the</li>
+								<li> CSS properties of elements in the</li>
+																<li> CSS properties of elements in the</li>
+								<li> CSS properties of elements in the</li>
+								<li> CSS properties of elements in the</li>
+								<li> CSS properties of elements in the</li>
+							</ol>
 						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="modal fade in" id="modal_share">
-				<div class="modal-backdrop fade in"></div>
-				<div class="modal-dialog">
-					<div class="share_wx">点击右上角菜单推荐给朋友或者分享到朋友圈</div>
-				</div>
+					</li>
+					<li>
+						<h3>
+							<span>
+								<img src="/img/jobs/more.png" alt="">
+							</span>
+							游戏数据分析师</h3>
+						<div class="position-desc">
+							<strong>职位描述：</strong>
+							<ol>
+								<li> CSS properties of elements in the</li>
+								<li> CSS properties of elements in the</li>
+								<li> CSS properties of elements in the</li>
+								<li> CSS properties of elements in the</li>
+							</ol>
+							<strong>职位要求：</strong>
+							<ol>
+								<li> CSS properties of elements in the</li>
+								<li> CSS properties of elements in the</li>
+								<li> CSS properties of elements in the</li>
+								<li> CSS properties of elements in the</li>
+							</ol>
+						</div>
+					</li>
+					<li>
+						<h3>
+							<span>
+								<img src="/img/jobs/more.png" alt="">
+							</span>
+							数据产品经理</h3>
+						<div class="position-desc">
+							<strong>职位描述：</strong>
+							<ol>
+								<li> CSS properties of elements in the</li>
+								<li> CSS properties of elements in the</li>
+								<li> CSS properties of elements in the</li>
+								<li> CSS properties of elements in the</li>
+							</ol>
+							<strong>职位要求：</strong>
+							<ol>
+								<li> CSS properties of elements in the</li>
+								<li> CSS properties of elements in the</li>
+								<li> CSS properties of elements in the</li>
+								<li> CSS properties of elements in the</li>
+							</ol>
+						</div>
+					</li>
+				</ul>
 			</div>
 
 			<footer>
-				<div>
-					<button class="btn btn-primary" id="sell">我要自荐</button>
+				<div class="btns">
+					<button id="sell" class="btn">我要自荐</button>
+					<button id="share" class="btn">推荐给朋友</button>
 				</div>
-				<div>
-					<button class="btn btn-default" id="share">推荐给朋友</button>
-				</div>
+
+				<div class="mask"></div>
 			</footer>
+		</section>
+	</script>
+
+		<div class="modal fade in" id="modal_form">
+			<div class="modal-backdrop fade in"></div>
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal">
+						<span aria-hidden="true">×</span>
+						<span class="sr-only">关闭</span>
+						</button>
+						<h4 class="modal-title">填写联系方式</h4>
+					</div>
+					<div class="modal-body">
+						<form method="post" id="form1">
+							<fieldset>
+								<label>应聘岗位</label>
+								<select name="position" class="form-control">
+									<option value="Java研发(WEB方向)">Java研发(WEB方向)</option>
+									<option value="数据挖掘工程师(Hadoop方向)">数据挖掘工程师(Hadoop方向)</option>
+									<option value="游戏数据分析师">游戏数据分析师</option>
+									<option value="数据产品经理">数据产品经理</option>
+								</select>
+								<label>称呼</label>
+								<input type="text" name="nickname" placeholder="填写称呼，方便我们联系您" maxlength="20"
+									required class="form-control">
+								<label>电话号码</label>
+								<input type="text" name="tel" maxlength="15" required
+									placeholder="请输入您的电话号码" class="form-control">
+								<label>QQ</label>
+								<input type="text" name="qq" maxlength="15" required
+									placeholder="请输入qq号码" class="form-control">
+								<p class="text-center" style="margin-top: 15px;">
+									<button type="submit" class="btn btn-primary btn-block" id="btn_send">立即自荐</button>
+									<button type="button" class="btn btn-default btn-block" id="close">算了，不想被打扰</button>
+								</p>
+							</fieldset>
+						</form>
+					</div>
+				</div>
+			</div>
 		</div>
+
+		<div class="modal fade in" id="modal_share">
+			<div class="modal-backdrop fade in"></div>
+			<div class="modal-dialog">
+				<div class="share_wx">点击右上角菜单推荐给朋友或者分享到朋友圈</div>
+			</div>
+		</div>
+
 		<script src="./js/zepto.js?v=3"></script>
 		<script src="./js/touch.js?v=3"></script>
+		<script src="./js/islider.js"></script>
 		<script>
 			$(function() {
+				var list = [{
+							'content' : $('#home').html()
+						},
+						{
+							'content' : $('#pos').html()
+						}
+				];
+
+				var islider = new iSlider({
+				    data: list,
+				    type: 'dom',
+				    dom: document.getElementById("wrapper"),
+				    duration: 1000,
+				    isVertical: true
+				});
+
 				var eventName = 'ontouchstart' in document ? 'singleTap' : 'click'
-				$('.panel-title').on(eventName, function() {
-					var panelBody = $(this).parents('.panel').find('.panel-body')
-					panelBody.parent().siblings().find('.panel-body').hide()
-					panelBody.parent().siblings().find('.panel-heading span').text('+')
-					if (panelBody.css('display') == 'none') {
-						panelBody.show()
-						$(this).find('span').text('-')
+				$('.datalist h3').on(eventName, function() {
+					var li = $(this).parents('li')
+					if (!li.hasClass('current')) {
+						$('.current').removeClass('current')
+						li.addClass('current')
+						$('.datalist img').attr('src', '/img/jobs/more.png')
+						$(this).find('img').attr('src', '/img/jobs/more02.png')
 					} else {
-						panelBody.hide()
-						$(this).find('span').text('+')
+						$('.current').removeClass('current')
+						$(this).find('img').attr('src', '/img/jobs/more.png')
 					}
 				})
 
