add transition page

--- a/apps/jobs/views/incs/positions.ejs
+++ b/apps/jobs/views/incs/positions.ejs
@@ -92,7 +92,7 @@
 
 	<footer>
 		<div class="btns">
-			<a id="sell" class="btn ui-btn ui-corner-all" href="#contact">我要自荐</a>
+			<a id="sell" class="btn ui-btn ui-corner-all" href="#contact" data-rel="dialog" data-transition="flip">我要自荐</a>
 			<a id="share" class="btn ui-btn ui-corner-all" href="javascript:;">推荐给朋友</a>
 		</div>
 
