--- a/apps/jobs/views/incs/home.ejs
+++ b/apps/jobs/views/incs/home.ejs
@@ -10,6 +10,6 @@
 	</div>
 
 	<div class="btns">
-		<a class="ui-btn ui-shadow ui-corner-all" href="#pos" style="color: #172e56">查看职位</a>
+		<a class="ui-btn ui-shadow ui-corner-all" href="#pos" style="color: #172e56" data-transition="pop">查看职位</a>
 	</div>
 </section>
