--- a/apps/jobs/views/incs/positions.ejs
+++ b/apps/jobs/views/incs/positions.ejs
@@ -1,11 +1,11 @@
 <section class="pages-position" id="pos" data-role="page">
 	<div class="banner">
 		<div class="head">
-			<img src="/img/jobs/banner02.png" alt="">
+			<a href="#home" data-transition="pop"><img src="/img/jobs/banner02.png" alt=""></a>
 		</div>
 
 		<div class="logo">
-			<img src="/img/jobs/logo.png" alt="">
+			<a href="#home" data-transition="pop"><img src="/img/jobs/logo.png" alt=""></a>
 		</div>
 
 		<div style="clear: both;"></div>
