--- a/public/css/jobs.css
+++ b/public/css/jobs.css
@@ -19,11 +19,15 @@ body, input, select, textarea, button, .ui-btn {
 .page-home .desc {
 	color: #FFF;
 	text-shadow: none;
-	margin-top: 2em;
+	line-height: 1.4;
+	font-size: 1.2rem;
+	width: 90%;
+	margin: 0 auto;
+	padding-top: 1rem;
 }
 
 .btns {
-	width: 76%;
+	width: 90%;
 	margin: 4em auto;
 }
 /* 首页ends */
@@ -44,7 +48,7 @@ body, input, select, textarea, button, .ui-btn {
 
 .logo {
 	float: right;
-	width: 25%;
+	width: 20%;
 	margin-right: 1em;
 }
 
@@ -56,6 +60,8 @@ body, input, select, textarea, button, .ui-btn {
 
 #pos li a {
 	color: #172e56;
+	font-size: 1.4rem;
+	line-height: 1.4;
 }
 
 footer {
