--- a/apps/jobs/views/index.ejs
+++ b/apps/jobs/views/index.ejs
@@ -22,6 +22,9 @@
 		<script src="./js/jquery.mobile-1.4.5.min.js"></script>
 		<script>
 			$(function() {
+				if(location.hash) {
+					location.href = location.href.split('#')[0] + '#'
+				}
 				$('#pos li>a').on('tap', function() {
 					if($(this).hasClass('ui-icon-carat-r')) {
 						$(this).removeClass('ui-icon-carat-r').addClass('ui-icon-carat-d')
