--- a/apps/jobs/views/incs/positions.ejs
+++ b/apps/jobs/views/incs/positions.ejs
@@ -11,7 +11,7 @@
 		<div style="clear: both;"></div>
 	</div>
 
-	<ul data-role="listview"  class="ui-listview-outer">
+	<ul data-role="listview"  class="ui-listview-outer" id="pos_list">
 		<li>
 			<a>Java研发(WEB方向)</a>
 			<div>
@@ -90,7 +90,7 @@
 		</li>
 	</ul>
 
-	<footer>
+	<footer id="tools">
 		<div class="btns">
 			<a id="sell" class="btn ui-btn ui-corner-all" href="#contact" data-rel="dialog" data-transition="flip">我要自荐</a>
 			<a id="share" class="btn ui-btn ui-corner-all" href="javascript:;">推荐给朋友</a>
