独立的岗位列表

--- a/apps/jobs/views/incs/home.ejs
+++ b/apps/jobs/views/incs/home.ejs
@@ -2,15 +2,27 @@
 	<div class="banner">
 		<img src="/img/jobs/banner.png" alt="">
 	</div>
-
+	<h1 class="txt-center">加入吧，兄弟！DataEye需要你</h1>
 	<div class="desc">
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;DataEye是立足移动游戏，服务游戏全产业链的第三方专业数据分析服务平台。共有四大产品线：D-OAP运营分析平台、D-EAP体验分析平台、D-HAP HTML5游戏分析平台、D-IAP游戏投后分析平台。
+		&nbsp;&nbsp;&nbsp;&nbsp;第三方专业数据分析平台
 		<br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;DataEye助力游戏产业链各环节的数据统计分析，打造第三方"零距离"专业服务，开启企业私有云、企业定制化、服务全球化、多数据源采集等特色服务。
+		&nbsp;&nbsp;&nbsp;&nbsp;D-OAP、D-EAP、D-HAP、D-HAP四大产品线
+		<br>
+		&nbsp;&nbsp;&nbsp;&nbsp;“零距离” 7*24小时贴心服务
+		<br>
+		&nbsp;&nbsp;&nbsp;&nbsp;私有云、定制化
+		<br>
+		&nbsp;&nbsp;&nbsp;&nbsp;多数据源采集
+		<br>
+		&nbsp;&nbsp;&nbsp;&nbsp;全球化服务
+		<br>
+		&nbsp;&nbsp;&nbsp;&nbsp;......
+		<br>
+		&nbsp;&nbsp;&nbsp;&nbsp;DataEye，加入吧，兄弟!
 	</div>
 
 	<div class="btns">
-		<a class="ui-btn ui-shadow ui-corner-all" href="#pos"
+		<a class="ui-btn ui-shadow ui-corner-all" href="#pos_type"
 			style="color: #172e56; margin-top: 2rem;" data-transition="pop">查看职位</a>
 	</div>
 </section>
