--- a/apps/jobs/views/incs/positions.ejs
+++ b/apps/jobs/views/incs/positions.ejs
@@ -1,101 +1,234 @@
-<section class="pages-position" id="pos" data-role="page">
-	<div class="banner">
-		<div class="head">
-			<a href="#home" data-transition="pop"><img src="/img/jobs/banner02.png" alt=""></a>
-		</div>
+<section class="pages-position" id="java" data-role="page">
+	<% include ./banner.ejs %>
 
-		<div class="logo">
-			<a href="#home" data-transition="pop"><img src="/img/jobs/logo.png" alt=""></a>
+	<div class="pos-wrap">
+		<h3>Java高级工程师</h3>
+		<div>
+			<strong>职位描述：</strong>
+			<ol>
+				<li>负责web门户子模块设计实现</li>
+			</ol>
+			<strong>职位要求：</strong>
+			<ol>
+				<li>计算机相关专业，两年以上Java工作经验</li>
+				<li>Java基础良好，熟悉java网络，多线程编程</li>
+				<li>熟悉SpringMVC/Spring</li>
+				<li>熟悉TCP，HTTP网络协议</li>
+				<li>熟练使用Mysql，熟悉Mysql管理、优化者优先</li>
+				<li>熟悉Linux基本操作，精通Shell编程者优先。</li>
+				<li>能够熟练使用svn/tomcat/maven</li>
+				<li>能吃苦耐劳，有较强的沟通和执行能力</li>
+			</ol>
 		</div>
-
-		<div style="clear: both;"></div>
 	</div>
 
-	<ul data-role="listview"  class="ui-listview-outer" id="pos_list">
-		<li>
-			<a>Java研发(WEB方向)</a>
-			<div>
-				<strong>职位描述：</strong>
-				<ol>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-				</ol>
-				<strong>职位要求：</strong>
-				<ol>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-				</ol>
-			</div>
-		</li>
-		<li>
-			<a href="#hadoop">数据挖掘工程师(Hadoop方向)</a>
-			<div>
-				<strong>职位描述：</strong>
-				<ol>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-				</ol>
-				<strong>职位要求：</strong>
-				<ol>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-				</ol>
-			</div>
-		</li>
-		<li>
-			<a href="#game">游戏数据分析师</a>
-			<div>
-				<strong>职位描述：</strong>
-				<ol>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-				</ol>
-				<strong>职位要求：</strong>
-				<ol>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-				</ol>
-			</div>
-		</li>
-		<li>
-			<a href="#dog">数据产品经理</a>
-			<div>
-				<strong>职位描述：</strong>
-				<ol>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-				</ol>
-				<strong>职位要求：</strong>
-				<ol>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-				</ol>
-			</div>
-		</li>
-	</ul>
-
-	<footer id="tools">
-		<div class="btns">
-			<a id="sell" class="btn ui-btn ui-corner-all" href="#contact" data-rel="dialog" data-transition="flip">我要自荐</a>
-			<a id="share" class="btn ui-btn ui-corner-all" href="javascript:;">推荐给朋友</a>
-		</div>
-
-		<div class="mask"></div>
-	</footer>
+	<% include ./footer.ejs %>
 </section>
+
+<section class="pages-position" id="hadoop" data-role="page">
+	<% include ./banner.ejs %>
+
+	<div class="pos-wrap">
+		<h3 href="#hadoop">Hadoop高级工程师</h3>
+		<div>
+			<strong>职位描述：</strong>
+			<ol>
+				<li>负责公司数据仓库公共平台设计开发</li>
+				<li>负责公司海量数据分析及处理</li>
+				<li>负责其它日常需求开发</li>
+			</ol>
+			<strong>职位要求：</strong>
+			<ol>
+				<li>计算机相关专业，三年以上Java工作经验</li>
+				<li>Java基础良好，至少有一年 Hadoop 开发经验</li>
+				<li>深入了解 HDFS/MapReduce/HBase 架构及运行原理</li>
+				<li>深入了解 Spark/Hive/Storm，有实际开发者优先</li>
+				<li>具有公共平台、大型架构设计开发者优先</li>
+				<li>熟练掌握 Linux 基本操作和 Shell 编程</li>
+				<li>能吃苦耐劳，有强烈的责任感和良好的沟通能力</li>
+			</ol>
+		</div>
+	</div>
+	<% include ./footer.ejs %>
+</section>
+
+<section class="pages-position" id="devop" data-role="page">
+	<% include ./banner.ejs %>
+
+	<div class="pos-wrap">
+		<h3 href="#game">运维工程师</h3>
+		<div>
+			<strong>职位描述：</strong>
+			<ol>
+				<li>负责hadoop业务平台日常运营、故障处理等运维工作</li>
+				<li>负责相关业务的运营数据分析、运营质量分析等运营工作</li>
+				<li>负责相关业务的运营优化，制定相关运营规划</li>
+			</ol>
+			<strong>职位要求：</strong>
+			<ol>
+				<li>本科以上学历，计算机软件或相关专业 </li>
+				<li>3年以上Linux、unix操作系统运维经验</li>
+				<li>能够胜任7*24小时故障响应及处理</li>
+				<li>具备linux下编程经验，擅长shell编程者优先</li>
+				<li>有互联网运营经验者优先</li>
+				<li>具备良好的沟通技巧和团队合作精神。</li>
+			</ol>
+		</div>
+	</div>
+	<% include ./footer.ejs %>
+</section>
+
+<section class="pages-position" id="test" data-role="page">
+	<% include ./banner.ejs %>
+
+	<div class="pos-wrap">
+		<h3 href="#dog">测试工程师</h3>
+		<div>
+			<strong>职位描述：</strong>
+			<ol>
+				<li>负责根据项目测试计划制订项目测试用例并实施，保证项目质量和进度</li>
+				<li>负责与产品经理和开发人员就项目要求、进度和问题进行沟通</li>
+				<li>负责设计测试用例，组织并进行产品测试，提交软件的测试报告</li>
+				<li>负责缺陷跟踪和管理</li>
+				<li>负责其他专项测试的部分内容</li>
+			</ol>
+			<strong>职位要求：</strong>
+			<ol>
+				<li>2年以上的软件测试经验，具有一定编程能力</li>
+				<li>熟练使用LINUX、熟悉TCP/IP、HTTP等网络编程协议</li>
+				<li>熟悉项目开发及测试流程与各种测试技巧，熟悉测试用例及测试文档、测试报告的编写</li>
+				<li>熟悉至少一门脚本</li>
+			</ol>
+		</div>
+	</div>
+	<% include ./footer.ejs %>
+</section>
+
+<section class="pages-position" id="fe" data-role="page">
+	<% include ./banner.ejs %>
+
+	<div class="pos-wrap">
+		<h3 href="#dog">前端工程师</h3>
+		<div>
+			<strong>职位描述：</strong>
+			<ol>
+				<li>根据设计稿开发页面，将视觉设计的效果图实现HTML页面</li>
+				<li>与后台工程师进行页面开发联调并测试</li>
+			</ol>
+			<strong>职位要求：</strong>
+			<ol>
+				<li>2年以上互联网前端开发工作经验</li>
+				<li>熟悉html/js/css/html5等开发</li>
+				<li>熟练使用1-2种ajax技术及框架（jquery/mootools/extjs/Bootstrap等）</li>
+				<li>熟悉W3C规范，对网站优化、性能提升有丰富经验，能够解决浏览器兼容性等问题</li>
+				<li>良好的沟通能力和团队协作能力</li>
+				<li>善于学习，自我驱动，了解和学习业界新技术</li>
+			</ol>
+		</div>
+	</div>
+	<% include ./footer.ejs %>
+</section>
+
+<section class="pages-position" id="pd" data-role="page">
+	<% include ./banner.ejs %>
+
+	<div class="pos-wrap">
+		<h3 href="#dog">产品经理</h3>
+		<div>
+			<strong>职位描述：</strong>
+			<ol>
+				<li>负责大数据产品规划、设计，以及持续的改进完善等工作</li>
+				<li>撰写高质量的产品需求文档，完成用户界面设计、交互设计、对视觉设计进行把关，确保产品质量、项目进度 </li>
+				<li>通过大量的数据分析与竞品分析，完成相关调研分析工作 </li>
+				<li>与运营、设计、技术团队密切配合，推动各方改善，实现产品的持续优化 </li>
+				<li>跟进用户反馈并与用户交流，深入了解用户的心声</li>
+			</ol>
+			<strong>职位要求：</strong>
+			<ol>
+				<li>具有2年以上移动端产品经验，优秀的交互设计能力，对产品设计有极高的要求，追求极致的用户体验</li>
+				<li>善于观察与学习，具有宽广的视野、对于整体产品规划与大数据分析思路及互联网有自己的见解和理念</li>
+				<li>有优秀缜密的逻辑与思维能力，良好的协调能力、分析、计划及管理能力，具备良好的团队精神，沟通能力强</li>
+				<li>对手机游戏有深入的理解</li>
+				<li>有成熟的平台类产品、移动端产品设计经验者优先</li>
+			</ol>
+		</div>
+	</div>
+	<% include ./footer.ejs %>
+</section>
+
+<section class="pages-position" id="pm" data-role="page">
+	<% include ./banner.ejs %>
+
+	<div class="pos-wrap">
+		<h3 href="#dog">项目经理</h3>
+		<div>
+			<strong>职位描述：</strong>
+			<ol>
+				<li>深入了解产品线，根据产品／团队的特点，制定有针对性的敏捷实施方案，在改进过程中提供贴身指导，在需求管理，迭代管理，工程实践方面确保各项敏捷实践有效地落地</li>
+				<li>总结实践，并为产品线提供敏捷软件开发相关的各种培训</li>
+				<li>和测试部，运维部开展合作，确保敏捷在公司层面按计划有序地实施，确保项目的快速迭代上线</li>
+				<li>识别挖掘项目管理平台及研发基础设施工具的需求，指导部门内的开发团队完善各类工具平台</li>
+			</ol>
+			<strong>职位要求：</strong>
+			<ol>
+				<li>计算机相关专业，本科以上学历，5年以上软件行业从业经验</li>
+				<li>有扎实的技术功底和丰富的软件开发经验或丰富的需求或项目管理经验</li>
+				<li>具备一定敏捷实践经验（XP，Scrum等）</li>
+				<li>熟悉软件业界的最新技术趋势</li>
+				<li>优秀的沟通与表达能力，思维敏捷，执行力强</li>
+				<li>有互联网行业经验，曾经带领过团队成功实施敏捷转型优先</li>
+			</ol>
+		</div>
+	</div>
+
+	<% include ./footer.ejs %>
+</section>
+
+<section class="pages-position" id="bm" data-role="page">
+	<% include ./banner.ejs %>
+
+	<div class="pos-wrap">
+		<h3>商务经理</h3>
+		<div>
+			<ul>
+				<li>工作地可选：深圳/杭州/成都/上海/广州</li>
+				<li>市场如你——开拓客户市场，维护客户关系</li>
+				<li>朋友如你——喜欢交朋友，喜欢去挑战，善于去沟通，喜欢走四方</li>
+			</ul>
+		</div>
+	</div>
+	<% include ./footer.ejs %>
+</section>
+
+<section class="pages-position" id="mm" data-role="page">
+	<% include ./banner.ejs %>
+
+	<div class="pos-wrap">
+		<h3>媒介经理</h3>
+		<div>
+			<ul>
+				<li>工作地可选：深圳/北京</li>
+				<li>市场如你——撰写稿件，维护媒体关系，执行宣传活动</li>
+				<li>朋友如你——能开脑洞能发挥，思维活跃悟性高</li>
+			</ul>
+		</div>
+	</div>
+	<% include ./footer.ejs %>
+</section>
+
+<section class="pages-position" id="dm" data-role="page">
+	<% include ./banner.ejs %>
+
+	<div class="pos-wrap">
+		<h3>品牌经理</h3>
+		<div>
+			<ul>
+				<li>工作地：深圳</li>
+				<li>市场如你——策划市场活动方案，执行活动筹备</li>
+				<li>朋友如你——手脚麻利能统筹，善于思考能总结</li>
+			</ul>
+		</div>
+	</div>
+	<% include ./footer.ejs %>
+</section>
+
