--- a/public/css/jobs.css
+++ b/public/css/jobs.css
@@ -1,125 +1,174 @@
-body, input, select, textarea, button, .ui-btn {
-	font-family: Tahoma, microsoft yahei, "微软雅黑";
-	font-size: 1rem;
+body,input,select,textarea,button,.ui-btn {
+font-family:Tahoma, microsoft yahei, 微软雅黑;
+font-size:1rem;
+text-shadow:none;
 }
 
-.banner{
-	width: 90%;
-	margin: 1rem auto;
+.page-home h1 {
+color:#FFF;
+}
+
+a {
+	text-decoration: none;
+}
+
+.txt-center {
+text-align:center;
+text-shadow:none;
+}
+
+.banner {
+width:90%;
+margin:1rem auto;
 }
 
 .banner img {
-	width: 100%;
+width:100%;
 }
 
-/* 首页start */
 .page-home {
-	background: #172e56;
+background:#172e56;
 }
 
 .page-home .desc {
-	color: #FFF;
-	text-shadow: none;
-	line-height: 1.2;
-	font-size: 1rem;
-	width: 90%;
-	margin: 0 auto;
+color:#FFF;
+text-shadow:none;
+line-height:1.3;
+font-size:1rem;
+width:90%;
+margin:0 auto;
+}
+
+ol {
+margin-right:10px;
 }
 
 .btns {
-	width: 90%;
-	margin: 0 auto;
+width:90%;
+margin:0 auto;
 }
-/* 首页ends */
 
-/* 职位列表 start */
-.pages-position .banner, .page-item .banner {
-	background: #172e56;
-	width: 100%;
-	margin: 0;
-	padding: 1rem 0;
+.pages-position .banner,.page-item .banner {
+background:#172e56;
+width:100%;
+margin:0;
+padding:1rem 0;
 }
 
 .head {
-	float: left;
-	width: 40%;
-	margin-left: 1rem;
+float:left;
+width:40%;
+margin-left:1rem;
 }
 
 .logo {
-	float: right;
-	width: 20%;
-	margin-right: 1rem;
-}
-
-#pos li>div {
-	display: none;
-	padding: 0.5rem 0 0.5rem 1.6rem;
-	color: #172e56;
-}
-
-#pos li a {
-	color: #172e56;
-	font-size: 1rem;
-	line-height: 1.4;
+float:right;
+width:20%;
+margin-right:1rem;
 }
 
 footer {
-  text-align: center;
-  position: fixed;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  padding: 6px 0;
-  border-top: 1px solid #cfd3d7;
+text-align:center;
+position:fixed;
+left:0;
+right:0;
+bottom:0;
+border-top:1px solid #cfd3d7;
+padding:6px 0;
 }
 
-#pos footer .btns {
-  display: inline-block;
-  text-align: center;
-  z-index: 3;
-  position: relative;
-  margin: 0 auto;
+footer .btns {
+display:inline-block;
+text-align:center;
+z-index:3;
+position:relative;
+margin:0 auto;
 }
 
-#pos footer .btn {
-  font-size: 1rem;
-  border-radius: 5px;
-  color: #FFF;
-  text-shadow: none;
+footer .btn {
+font-size:1rem;
+border-radius:5px;
+color:#FFF !important;
+text-shadow:none !important;
 }
 
-footer .btn:hover, footer .btn:focus, footer .btn.focus {
-  color: #eee;
-  text-decoration: none;
+footer .btn:hover,footer .btn:focus,footer .btn.focus {
+color:#eee;
+text-decoration:none;
 }
 
 #sell {
-  background-color: #db4453;
+background-color:#db4453;
 }
 
 #share {
-  background-color: #172e56;
+background-color:#172e56;
 }
 
 .mask {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 0.8;
-  z-index: 2;
-  background: #FFF;
+position:absolute;
+top:0;
+left:0;
+width:100%;
+height:100%;
+opacity:.8;
+z-index:2;
+background:#FFF;
 }
 
 #contact fieldset {
-	padding: 1rem;
+padding:1rem;
 }
 
 #btn_send {
-	background: #2196f3;
-	color:#FFF;
+background:#2196f3;
+color:#FFF;
 }
 
+.job_wrap {
+margin-bottom:1rem;
+}
+
+.job_title {
+text-align:center;
+margin-bottom:0.5rem;
+}
+
+.job_title h3 {
+font-size:1.4rem;
+font-weight:600;
+display:inline-block;
+position:relative;
+color:#5a5a5a;
+margin: 1rem 0;
+}
+
+.job_list {
+overflow:hidden;
+border-bottom:1px solid #ccc;
+width: 96%;
+margin:0 auto;
+}
+
+.job_list .job_box {
+width:33.299999%;
+display:block;
+float:left;
+text-align:center;
+line-height:3rem;
+margin-bottom: 0.6rem;
+}
+
+.job_list .job_box_inner {
+border:1px solid #ccc;
+display:inline-block;
+width:92%;
+color:#5a5a5a !important;
+}
+
+.pos-wrap {
+	width: 90%;
+	margin: 0 auto;
+	margin-bottom: 160px;
+}
 
