--- a/apps/jobs/views/incs/footer.ejs
+++ b/apps/jobs/views/incs/footer.ejs
@@ -1,7 +1,7 @@
 <footer id="tools">
 	<div class="btns">
-		<a id="sell" class="btn ui-btn ui-corner-all" href="#contact" data-rel="dialog" data-transition="flip">我要自荐</a>
-		<a id="share" class="btn ui-btn ui-corner-all" href="javascript:;">推荐给朋友</a>
+		<a class="sell btn ui-btn ui-corner-all" href="#contact" data-rel="dialog" data-transition="flip">我要自荐</a>
+		<a class="share btn ui-btn ui-corner-all" href="javascript:;">推荐给朋友</a>
 	</div>
 
 	<div class="mask"></div>
