--- a/apps/jobs/views/incs/home.ejs
+++ b/apps/jobs/views/incs/home.ejs
@@ -1,28 +1,11 @@
 <section data-role="page" class="page-home" id="home">
-	<div class="banner">
-		<img src="/img/jobs/banner.png" alt="">
-	</div>
-	<h1 class="txt-center">加入吧，兄弟！DataEye需要你</h1>
-	<div class="desc">
-		&nbsp;&nbsp;&nbsp;&nbsp;第三方专业数据分析平台
-		<br>
-		&nbsp;&nbsp;&nbsp;&nbsp;D-OAP、D-EAP、D-HAP、D-HAP四大产品线
-		<br>
-		&nbsp;&nbsp;&nbsp;&nbsp;“零距离” 7*24小时贴心服务
-		<br>
-		&nbsp;&nbsp;&nbsp;&nbsp;私有云、定制化
-		<br>
-		&nbsp;&nbsp;&nbsp;&nbsp;多数据源采集
-		<br>
-		&nbsp;&nbsp;&nbsp;&nbsp;全球化服务
-		<br>
-		&nbsp;&nbsp;&nbsp;&nbsp;......
-		<br>
-		&nbsp;&nbsp;&nbsp;&nbsp;DataEye，加入吧，兄弟!
-	</div>
+	<div class="bg bg-one"></div>
+</section>
 
-	<div class="btns">
-		<a class="ui-btn ui-shadow ui-corner-all" href="#pos_type"
-			style="color: #172e56; margin-top: 2rem;" data-transition="pop">查看职位</a>
-	</div>
+<section data-role="page" class="page-home" id="product">
+	<div class="bg bg-two"></div>
+</section>
+
+<section data-role="page" class="page-home" id="team">
+	<div class="bg bg-three"></div>
 </section>
